[gd_scene load_steps=5 format=3 uid="uid://koaem4spi88q"]

[ext_resource type="PackedScene" path="res://scene/user_interface/entity/popup/game_over.tscn" id="1_a3ijd"]
[ext_resource type="Script" path="res://scene/user_interface/gameui/gameplay_ui.gd" id="1_okw1e"]
[ext_resource type="PackedScene" uid="uid://oxtfrtm1jlcb" path="res://scene/user_interface/gameui/game_hud.tscn" id="2_7bdyq"]
[ext_resource type="PackedScene" uid="uid://w6haidj1nbth" path="res://scene/user_interface/entity/popup/pause_menu.tscn" id="4_hwjms"]

[node name="GamePlayUI" type="Node2D"]
script = ExtResource("1_okw1e")

[node name="GameHUD" parent="." instance=ExtResource("2_7bdyq")]
layer = 4

[node name="GameOverUI" parent="." instance=ExtResource("1_a3ijd")]
layer = 5

[node name="PauseMenu" parent="." instance=ExtResource("4_hwjms")]

[connection signal="game_over" from="GameHUD" to="." method="_on_game_hud_game_over"]
[connection signal="paused" from="GameHUD" to="." method="_on_game_hud_paused"]
[connection signal="restart_game" from="GameOverUI" to="." method="_on_game_over_ui_restart_game"]
